Practice_class_2
>>> a = 12
>>> b = 3.5
>>> c = a + b
>>> d = 2 + 3j
>>> e = "7"
>>> f = a > int(e)
>>> g = str(c) = e
  File "<python-input-18>", line 1
    g = str(c) = e
        ^^^^^^
SyntaxError: cannot assign to function call
>>> g = str(c) + e
>>> print(a+b)
15.5
>>> c = 12 + 3.5
>>> print(c)
15.5
>>> f = 12 > int("7")
>>> print(f)
True
>>> g = str(15.5) + "7"
>>> print(g)
15.57
>>> print(type(g))
<class 'str'>
>>> print(type(c))
<class 'float'>
>>> print(type(f))
<class 'bool'>
>>>
>>>
>>>
>>> x = 5
>>> y = 2
>>> z = x / y
>>> k = x // y
>>> m = x == float(k)
>>> n - complex(k, y)
Traceback (most recent call last):
  File "<python-input-38>", line 1, in <module>
    n - complex(k, y)
    ^
NameError: name 'n' is not defined
>>> n = complex(k, y)
>>> z = 5 / 2
>>> print(z)
2.5
>>> print(type(z))
<class 'float'>
>>> k = 5 // 2
>>> print(k)
2
>>> print(type(k))
<class 'int'>
>>> m = 5 == float(2)
>>> print(m)
False
>>> print(type(m))
<class 'bool'>
>>> n = complex(2, 2)
>>> print(n)
(2+2j)
>>> print(type(n))
<class 'complex'>
>>>
>>>
>>> a = "15"
>>> b = 4
>>> c = 2.0
>>> d = True
>>> e = complex(b, c)
>>> f = int(a) + b
>>> g = f > c
>>> h = str(g) + a
>>>
>>> e = complex(4, 2.0)
>>> print(e)
(4+2j)
>>> print(type(e))
<class 'complex'>
>>>
>>>
>>> f = int("15") + 4
>>> print(f)
19
>>>
>>> g = 19 > 2.0
>>> print(type(f))
<class 'int'>
>>>
>>> print(g)
True
>>> print(type(g))
<class 'bool'>
>>>
>>> h = str(True) + "15"
>>> print(h)
True15
>>> print(type(h))
<class 'str'>
>>>
>>>
>>>
>>>
>>> numbers = [12, 7, 12, 3, 7, 9, 1, 9, 12]
>>> new_numbers = numbers.count(12)
>>> print(new_numbers)
3
>>>
>>>
>>> print(numbers.count(12))
3
>>>
>>> print(sorted(numbers))
[1, 3, 7, 7, 9, 9, 12, 12, 12]
>>> print(numbers)
[12, 7, 12, 3, 7, 9, 1, 9, 12]
>>>
>>>
>>> print(numbers.index(7))
1
>>>
>>> reversed_numbers = numbers[::-1]
>>> print(reversed_numbers)
[12, 9, 1, 9, 7, 3, 12, 7, 12]
>>> reversed_numbers = list(reversed(numbers))
>>> print(reversed_numbers)
[12, 9, 1, 9, 7, 3, 12, 7, 12]
>>>
>>>
>>> numbers.append(numbers[2] + numbers[5])
>>> print(numbers)
[12, 7, 12, 3, 7, 9, 1, 9, 12, 21]
>>> sum_value = numbers[2] + numbers[5]
>>> numbers.append(sum_value)
>>> print(numbers)
[12, 7, 12, 3, 7, 9, 1, 9, 12, 21, 21]
>>>
>>>
>>> data = ['25', '3.14', 'True', '8', 'False']
>>> a = int(data[0])
>>> print(a)
25
>>> b = float(data[1])
>>> print(b)
3.14
>>> c = bool(data[2])
>>> print(c)
True
>>> d = int(data[3])
>>> print(d)
8
>>> e = bool(data[-1])
>>> print(e)
True
>>> new_data = [a, b, c, d, e]
>>> print(new_data)
[25, 3.14, True, 8, True]
>>> e = bool('')
>>> new_data = [a, b, c, d, e]
>>> print(new_data)
[25, 3.14, True, 8, False]
>>>
>>>
>>> data = (10, 20, 30, 20, 40, 20, 50)
>>> print(data.count(20))
3
>>>
>>> print(data.index(40))
4
>>>
>>> print(data[::-1])
(50, 20, 40, 20, 30, 20, 10)
>>>
>>> print(30 in data)
True
>>> exit()
